fix: remove the flickering of the user card when switching tabs in the profile page
- update all redirections to user profiles to include the tab query parameter
- hide the global scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -134,6 +134,13 @@ a {
 
 html, body, app-root {
   min-height: 100vh;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    background: transparent;
+    width: 0px;
+  }
 }
 
 body {
